# modal-sandbox-docker

./: README.md  preview.py  pyproject.toml
.github/workflows/: compose-preview.yml
demo/: .env.example  README.md  compose.yaml
demo/api/: Dockerfile  main.py  requirements.txt
demo/worker/: Dockerfile  requirements.txt  worker.py
modal_app/: __init__.py  compose.py  eval.py  github.py  lifecycle.py  metadata.py  sandbox.py  tunnels.py
